azure-key-vault-properties-provider/2.1/modules/ROOT/pages/azure-key-vault-properties-provider-upgrade-guide.adoc
= Upgrading and Migrating Azure Key Vault Properties Provider to Version 2.1  - Mule 4

Upgrade Azure Key Vault Properties Provider to version 2.1.0.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|1.0.1 |2.1.0
|===

== Changes in This Release

This release contains the following changes:

* Added *Uri Override* field to specify the URI for a key vault located outside Azure Commercial Cloud.
* Azure Key Vault Properties Provider now supports Azure Default Credential. You can specify your authentication credentials via environment variables.
* The `tenantId`, `clientId`, and `clientSecret` attributes are now optional. You must specify these attributes together; otherwise, the properties provider uses the values from the environment variables.
* The properties provider changed its internal package name.
* The `Key Vault Name` attribute is now optional and you can set it through the system property `MULE_AZURE_KEY_VAULT_NAME`.

== Upgrade Prerequisites

Before you perform the upgrade, you must complete the following:

* Create a backup of your files, data, and configurations in case you need to restore to them.

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Anypoint Studio, create a Mule project.
. In *Mule Palette*, click *Search in Exchange*.
. In *Add Dependencies to Project*, enter `azure key vault properties provider` in the search field.
. In *Available modules*, select *Azure Key Vault Properties Provider* and click *Add*.
. Click *Finish*.
. Verify that the Azure Key Vault Properties Provider `mule4-azure-key-vault-properties-provider` version is 2.1.0 in the `pom.xml` file in the Mule project.

== Verify the Upgrade

After you install the latest version of the properties provider, verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection to verify that the operations work.
. Ensure that the `Key Vault Name` is correctly configured either in the configuration file or as the system property `MULE_AZURE_KEY_VAULT_NAME`.
. If using environment variables for `tenantId`, `clientId`, and `clientSecret`, ensure these are set correctly and verify their usage.

== Updating Configuration Files

If your project configuration files (XML) specify the `Key Vault Name`, update them as follows:

* If the `keyVaultName` attribute is not needed, you can remove it and use the system property `MULE_AZURE_KEY_VAULT_NAME` instead.
* Ensure that `tenantId`, `clientId`, and `clientSecret` are correctly set, either as attributes in the configuration file or as environment variables (`AZURE_CLIENT_ID`, `AZURE_CLIENT_SECRET`, `AZURE_TENANT_ID`).

=== Example Configuration

If you prefer to use environment variables, your configuration looks like this:

[source,xml,linenums]
----
<azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config" />
----

Alternatively, use the attributes directly in the configuration:

[source,xml,linenums]
----
<azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"
    keyVaultName="connectors-vault"
    tenantId="your-tenant-id"
    clientId="your-client-id"
    clientSecret="your-client-secret"/>
----

== Reverting the Upgrade

If you need to revert to the previous version of Azure Key Vault Properties Provider, follow these steps:

. Go to Anypoint Studio.
. In the project’s `pom.xml` file, change the `mule4-azure-key-vault-properties-provider` dependency version from 2.1.0 to the previous version.

After reverting, you must review and adapt your configurations to be compatible with the previous version:

=== Reverting to Version 2.0.0:

Ensure that the `keyVaultName` attribute is explicitly set in your configuration files, as version 2.0.0 does not support the system property `MULE_AZURE_KEY_VAULT_NAME`.

Example Configuration for Version 2.0.0:

[source,xml,linenums]
----
  <azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"
      keyVaultName="connectors-vault"
      tenantId=""
      clientId=""
      clientSecret=""/>
----

=== Reverting to a Major Previous Version (e.g., 1.0.1):

Ensure that the `keyVaultName`, `tenantId`, `clientId`, and `clientSecret` attributes are explicitly set in your configuration files, as these versions do not support setting these values through system properties or environment variables.

Example Configuration for Version 1.0.1:

[source,xml,linenums]
----
  <azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"
     keyVaultName="connectors-vault"
     tenantId="your-tenant-id"
     clientId="your-client-id"
     clientSecret="your-client-secret"/>
----

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
