azure-key-vault-properties-provider/2.2/modules/ROOT/pages/azure-key-vault-properties-provider-upgrade-guide.adoc
= Upgrading and Migrating Azure Key Vault Properties Provider to Version 2.2  

Upgrade Azure Key Vault Properties Provider to version 2.2.0.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|2.1.x |2.2.0
|===

== Changes in This Release

This release contains the following changes:

* Azure Key Vault Properties Provider now supports multiple key vault configurations in the same Mule app. Each configuration connects to a different key vault, and you reference secrets by using the configuration name as a namespace, in the format `${azure-key-vault-properties-provider::configName::secret::yourSecret}`.
* The legacy secret format `${azure-key-vault-properties-provider::secret::yourSecret}` is now supported only when the Mule app contains a single properties provider configuration.

[IMPORTANT]
====
If your existing configuration has multiple configs defined and references secrets through the legacy `${azure-key-vault-properties-provider::secret::yourSecret}` format, you must update those references to use the `${azure-key-vault-properties-provider::configName::secret::yourSecret}` format after upgrading. For the migration steps, refer to <<update-configuration-files,Update Configuration Files>>.
====

== Upgrade Prerequisites

To perform the upgrade:

* Create a backup of your files, data, and configurations in case you need to restore to them.

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Anypoint Studio, create a Mule project.
. In *Mule Palette*, click *Search in Exchange*.
. In *Add Dependencies to Project*, enter `azure key vault properties provider` in the search field.
. In *Available modules*, select *Azure Key Vault Properties Provider* and click *Add*.
. Click *Finish*.
. Verify that the Azure Key Vault Properties Provider `mule4-azure-key-vault-properties-provider` version is 2.2.0 in the `pom.xml` file in the Mule project.

== Verify the Upgrade

After you install the latest version of the properties provider, verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection to verify that the operations work.
. Ensure that the `Key Vault Name` is correctly configured for each configuration, either through the `keyVaultName` attribute or the system property `MULE_AZURE_KEY_VAULT_NAME`. If your Mule app uses multiple key vault configurations that must connect to different vaults, set the `keyVaultName` attribute explicitly on each configuration, because configurations that omit `keyVaultName` all fall back to the same system property value and therefore resolve to the same vault.
. If using environment variables for `tenantId`, `clientId`, and `clientSecret`, ensure these are set correctly and verify their usage.

[[update-configuration-files]]
== Update Configuration Files

If your project configuration files (XML) reference secrets through the legacy `${azure-key-vault-properties-provider::secret::yourSecret}` format and your Mule app uses multiple key vault configurations, update the secret references to use the configuration name as a namespace:

* Before upgrading:
+
[source,xml,linenums]
----
<azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"
    keyVaultName="connectors-vault"/>

<set-variable variableName="dbPassword"
    value="${azure-key-vault-properties-provider::secret::mulesoft-test-password}"/>
----

* After upgrading:
+
[source,xml,linenums]
----
<azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"
    keyVaultName="connectors-vault"/>

<set-variable variableName="dbPassword"
    value="${azure-key-vault-properties-provider::configName::secret::yourSecret}"/>
----

If your Mule app uses a single configuration, the legacy secret format continues to work and no changes are required.

If your project configuration files (XML) specify multiple Key Vault configurations, update them as follows:

* If a configuration must resolve to the vault defined by the system property `MULE_AZURE_KEY_VAULT_NAME`, you can remove the `keyVaultName` attribute from that configuration. Note that all configurations that omit `keyVaultName` fall back to the same system property value and therefore resolve to the same vault, so set the `keyVaultName` attribute explicitly on each configuration that must connect to a different vault.
* Ensure that `tenantId`, `clientId`, and `clientSecret` are correctly set, either as attributes in the configuration file or as environment variables (`AZURE_CLIENT_ID`, `AZURE_CLIENT_SECRET`, `AZURE_TENANT_ID`).

=== Example Configuration

If you prefer to use environment variables, your configuration looks like this:

[source,xml,linenums]
----
<azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config" />
----

Alternatively, use the attributes directly in the configuration:

[source,xml,linenums]
----
<azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"
    keyVaultName="connectors-vault"
    tenantId="your-tenant-id"
    clientId="your-client-id"
    clientSecret="your-client-secret"/>
----

== Revert the Upgrade

If you need to revert to the previous version of Azure Key Vault Properties Provider, follow these steps:

. Go to Anypoint Studio.
. In the project’s `pom.xml` file, change the `mule4-azure-key-vault-properties-provider` dependency version from 2.2.0 to the previous version.

After reverting, you must review and adapt your configurations to be compatible with the previous version:

=== Revert to Version 2.1.x:

If you use multiple key vault configurations or reference secrets through the `${azure-key-vault-properties-provider::configName::secret::yourSecret}` format, revert your secret references to the legacy `${azure-key-vault-properties-provider::secret::yourSecret}` format, because versions earlier than 2.2.0 do not support configuration-name namespacing. These versions support only a single key vault configuration.

=== Revert to Version 2.0.0:

Ensure that the `keyVaultName` attribute is explicitly set in your configuration files, as version 2.0.0 does not support the system property `MULE_AZURE_KEY_VAULT_NAME`.

Example Configuration for Version 2.0.0:

[source,xml,linenums]
----
  <azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"
      keyVaultName="connectors-vault"
      tenantId=""
      clientId=""
      clientSecret=""/>
----

=== Revert to a Major Previous Version (e.g., 1.0.1):

Ensure that the `keyVaultName`, `tenantId`, `clientId`, and `clientSecret` attributes are explicitly set in your configuration files, as these versions do not support setting these values through system properties or environment variables.

Example Configuration for Version 1.0.1:

[source,xml,linenums]
----
  <azure-key-vault-properties-provider:config name="Azure_Key_Vault_Properties_Provider_Config"
     keyVaultName="connectors-vault"
     tenantId="your-tenant-id"
     clientId="your-client-id"
     clientSecret="your-client-secret"/>
----

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.salesforce.com[Salesforce Help]
